<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_account"
            android:title="Home" />
        <item
            android:id="@+id/nav_promo"
            android:icon="@drawable/ic_promo"
            android:title="Promotions" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="News" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="Notification" />

        <item
            android:id="@+id/action_help"
            android:title="@string/action_help"
            android:icon="@drawable/ic_help"/>

    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/action_feed"
                android:title="@string/action_feedback"
                android:icon="@android:drawable/ic_dialog_email"/>
            <item
                android:id="@+id/action_share"
                android:title="@string/action_share"
                android:icon="@drawable/ic_share"/>

            <item
                android:id="@+id/nav_settings"
                android:title="Settings"
                android:icon="@drawable/ic_settings"/>

            <item
                android:id="@+id/sign_out"
                android:orderInCategory="200"
                android:title="Sign out"
                app:showAsAction="never"
                />

        </menu>
    </item>

</menu>
