<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp">
    <ImageView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_account"
        android:id="@+id/profile_icon"
        android:background="@color/kongablue"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>
    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/profile_icon"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        android:typeface="serif"
        android:id="@+id/user"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

    <ImageView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_carts"
        android:id="@+id/history_icon"
        android:background="@color/kongablue"
        android:layout_below="@+id/profile_icon"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>
    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/history_icon"
        android:layout_below="@+id/profile_icon"
        android:text="@string/order_history"
        android:textColor="@color/black"
        android:typeface="serif"
        android:textStyle="bold"
        android:id="@+id/history"
        android:textSize="25sp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

    <ImageView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_about"
        android:id="@+id/about_icon"
        android:layout_below="@+id/history_icon"
        android:background="@color/kongablue"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>
    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/history_icon"
        android:layout_below="@+id/history_icon"
        android:id="@+id/about_us"
        android:text="@string/about"
        android:textColor="@color/black"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

</RelativeLayout>

</LinearLayout>
